# yirl

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW-TO-WEBASM.md  Makefile  README.md  check.sh  cmake_sdl_gpu.sh  configure  configure-helper.sh  countLine.sh  gdb-tests.sh  lgtm.yml  package-game.sh  package-maker.sh  sonar-project.properties  tests-asan.sh  tests.sh  yirl-completion.bash  yirl-loader.sh
.github/workflows/: Ubuntu.yml  arch-pkgbuild.yml  c.yml  docker-image-ci.yml  docker-image.yml  mingw.yml  win-pr-builder.yml
app/image_viewer/: init.c  start.c  start.json
app/lpcs-char-maker/: init.krk  start.jsonc
core/description/: CMakeLists.txt  description.c  json-desc.c  rawfile-data-decs.c  rawfile-decs.c
core/entity/: CMakeLists.txt  Entity.cpp  debug_core.c  debug_core.h  entity-convertions.c  entity-cplusplus.cpp  entity-patch.c  entity-string.c  entity.c
core/entity-script/: CMakeLists.txt  lua-binding.c
core/game/: CMakeLists.txt  game.c
core/generic-loader/: CMakeLists.txt  main.c
core/script/: CMakeLists.txt  binding.c  duk-script.c  entity-script.c  krk.c  lua-binding.c  lua-convert.c  lua-script.c  luaScript.c  native-script.c  perl.c  ph7-script.c  quickjs.c  s7-script.c  s7.c  s7.h  script.c  tcc-script.c  tcc-syms.c  ybytecode-asm-tok.h  ybytecode-script.c
core/sound/: CMakeLists.txt  js.c  sdl.c  sound-libvlc.c  sound-libvlc.h  sound.c
core/util/: CMakeLists.txt  block-array.c  debug.c  math.c  simple-net.c  util.c
core/widget/: CMakeLists.txt  canvas.c  canvas.cpp  container.c  contener.c  event-base-objs.c  events.c  map.c  menu.c  pos.c  rect.c  text-screen.c  texture.c  video-player.c  video.c  widget-callback.c  widget.c
core/widget/curses/: CMakeLists.txt  curses-state.h  curses.c  map.c  menu.c  text-screen.c
core/widget/sdl2/: CMakeLists.txt  canvas-sdl.h  canvas.c  canvas.cpp  gpu-compat.h  map.c  menu.c  sdl-geometry.h  sdl-internal.h  sdl.c  text-screen.c  video.c
core/ybytecode/: CMakeLists.txt  condition.c  ybytecode.c
core/yscript/: CMakeLists.txt  yscript-bytecode.c
docker/: Dockerfile  README.md  make.sh
example/: CMakeLists.txt
example/shooter/: CMakeLists.txt  main.c  shooter.c  shooter.h  shooter.json  shooter.mk  start.json
example/snake/: CMakeLists.txt  Makefile  main.c  snake.lua  start.json
games/: README.md
games/LoGB/: actions.c  init.c  main.json  resources.json  start.json
games/asteroide-shooter/: start.json
games/sukeban/: CMakeLists.txt  cave.sm  dialogues.json  house.sm  main.c  menus.json  npcs.json  resources.json  start.json
games/vapz/: init.c  main.json  resources.json  start.json
gravier/: Makefile  array-2.pl  array-2.pl.expect  array.pl  array.pl.expect  complex-math.pl  complex-math.pl.expect  condition.pl  condition.pl.expect  do.pl  do.pl.expect  eoc.pl  eoc.pl.expect  foreach.pl  foreach.pl.expect  function-2.pl  function-2.pl.expect  function-3.pl  function-3.pl.expect  function-4.pl  function-4.pl.expect  function-after.pl  function-condition.pl  function-condition.pl.expect  function-ret.pl  function-ret.pl.expect  function.pl  function.pl.expect  gravier-str.h  gravier.c  hello.pl  hello.pl.expect  int.pl  loop-bench.pl  loop-bench.pl.expect  loop.pl  loop.pl.expect  math.pl  math.pl.expect  perl-tok.h  (+7 more)
gravier/lib-test/: add.pl  add.pl.expect  main.c  subcall.pl.expect
include/core/: block-array.h  debug.h  description.h  entity-script.h  entity.h  game.h  json-desc.h  lua-binding.h  lua-convert.h  macro.h  native-script.h  script.h  sound-libvlc.h  stack.h  tcc-script.h  utils.h  ybytecode-script.h  ybytecode.h  yscript.h
include/tinycc/: stdbool.h
include/widget/: contener.h  curses-driver.h  keydef.h  map.h  menu.h  pos.h  rect.h  sdl-driver.h  text-screen.h  widget-callback.h  widget.h
include/yirl/: all.h  basic.h  block-array.h  canvas.h  condition.h  container.h  contener.h  curses-driver.h  debug.h  description.h  duk-script.h  entity-array.h  entity-cplusplus.h  entity-macro.h  entity-script.h  entity-string.h  entity.h  event-base-objs.h  events.h  filesystem.h  game.h  keydef.h  krk-script.h  lua-binding.h  lua-convert.h  lua-script.h  map.h  menu.h  native-script.h  perl-script.h  ph7-script.h  pos.h  quickjs-script.h  rawfile-desc.h  rect.h  s7-script.h  script.h  sdl-driver.h  simple-net.h  sound.h  (+13 more)
modules/: README.md
modules/8086-emu/: asm-inst.h  asm-tok.h  asm.c  charset.h  start.c
modules/TextInput/: init.yb  input_test.json  start.json
modules/amap/: README.md  lvl-test  lvl-test.json  lvl2-test  lvl2-test.json  start.js
modules/asteroide-shooter/: ast-shoot.lua  start.json  start.lua
modules/c_app/: ctype.h  curses.h  signal.h  start.c  stdlib.h
modules/dialogue/: README.md  blabla.json  init.c
modules/dialogue-box/: init.lua  start.json
modules/famiyirl/: Makefile  color-atari.json  hello-yirl.asm  hello-yirl.ybin  init.c  opcode.h  start.c  start.json  yirl-cc64.cfg
modules/hightscore/: score.lua  start.json
modules/jrpg-fight/: README.md  animation.lua  init.lua  katakana-words.json  start.json
modules/list/: init.c  list.c  list.h  start.json
modules/load-chr/: start.c
modules/loading_bar/: start.c
modules/lpcs-infos/: items.jsonc  start.jsonc  units.jsonc
modules/maze/: start.json
modules/pong/: start.scm
scripts-dependancies/: object-wrapper.lua
sukeban/: CMakeLists.txt  menus.json  resources.json  start.json
tests/: CMakeLists.txt  add.yb  block-array.c  canvas.c  container.c  contener.c  dialogue-box.c  dialogue-mod.c  duk-script.c  entity-patch.c  hi.js  hi.scm  js.c  lifecycle.c  list-mod.c  lpp-spritesheet.c  lua-script.c  main-entity.c  main-lua.c  main-tcc.c  main.c  map.c  math.c  maze_generator.c  menu.c  misc.c  multipleObj.json  ph7-script.c  raw-file.c  s7-script.c  script.c  setunset.c  simple.json  simple.lua  simple.txt  stringOperations.c  sukeban-fight.c  tcc-script.c  test-copy.c  test-entity.lua  (+13 more)
tests/perl-test/: start.pl
tests/testMod/: Menu.json  start.json
widget/: CMakeLists.txt  map.c  menu.c  text-screen.c  widget-callback.c  widget.c
(+46 files in other folders)
